@@ -357,6 +357,24 @@ Package=<4>
 
 ###############################################################################
 
+Project: "nxalarm"=.\src\client\nxalarm\nxalarm.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+    Begin Project Dependency
+    Project_Dep_Name libnetxms
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name libnxcl
+    End Project Dependency
+}}}
+
+###############################################################################
+
 Project: "nxav"=.\src\console\nxav\nxav.dsp - Package Owner=<4>
 
 Package=<5>
