@@ -1,0 +1,7 @@
+INCLUDES=-I@top_srcdir@/include
+
+bin_PROGRAMS = nxalarm
+nxalarm_SOURCES = nxalarm.cpp
+nxalarm_LDADD = ../../libnetxms/libnetxms.la ../../libnxcl/libnxcl.la ../../libnxmap/libnxmap.la ../../libnxsnmp/libnxsnmp.la
+
+EXTRA_DIST = nxalarm.dsp nxalarm.h
