@@ -1,0 +1,34 @@
+/* 
+** NetXMS - Network Management System
+** nxalarm - manage alarms from command line
+** Copyright (C) 2003, 2004, 2005, 206, 2007, 2008 Victor Kirhenshtein
+**
+** This program is free software; you can redistribute it and/or modify
+** it under the terms of the GNU General Public License as published by
+** the Free Software Foundation; either version 2 of the License, or
+** (at your option) any later version.
+**
+** This program is distributed in the hope that it will be useful,
+** but WITHOUT ANY WARRANTY; without even the implied warranty of
+** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+** GNU General Public License for more details.
+**
+** You should have received a copy of the GNU General Public License
+** along with this program; if not, write to the Free Software
+** Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+**
+** File: nxalarm.h
+**
+**/
+
+#ifndef _nxalarm_h_
+#define _nxalarm_h_
+
+#include <nms_common.h>
+#include <nxclapi.h>
+
+#if HAVE_GETOPT_H
+#include <getopt.h>
+#endif
+
+#endif
