@@ -14,6 +14,7 @@
   and configuration polls
 - NetXMS server now can understand interface aliases (description in Cisco terms)
 - Added optional synchronization of node names with DNS
+- New command line tool for managing alarms - nxalarm
 - Fixed issues: #189, #190, #199
 
 
